fix: double scroll bar

--- a/src/app/app-interactive-map/components/app-build/app-build.component.scss
+++ b/src/app/app-interactive-map/components/app-build/app-build.component.scss
@@ -17,6 +17,7 @@
 .container {
   position: relative;
   min-height: 100%;
+  overflow: visible;
 }
 
 .card {
